In Code Some Issues Before And Then After I Solve All Issues

--- a/signup.html
+++ b/signup.html
@@ -84,7 +84,7 @@
                       type="password"
                       class="form-control"
                       id="password"
-                      onclick="PassStyle()" onkeyup="password_validate"
+                      onclick="PassStyle()"
                     />
                   </div>
 
